# Aether

./: .gitignore  CMakeLists.txt
.planning/: PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md
.planning/phases/01-project-scaffold-audio-pipeline/: 01-01-PLAN.md  01-01-SUMMARY.md  01-02-PLAN.md  01-02-SUMMARY.md  01-CONTEXT.md  01-RESEARCH.md  01-VERIFICATION.md
.planning/phases/02-cabinet-resonance/: 02-01-PLAN.md  02-01-SUMMARY.md  02-02-PLAN.md  02-02-SUMMARY.md  02-CONTEXT.md  02-RESEARCH.md  02-VERIFICATION.md
.planning/phases/03-early-reflections-diffuse-tail/: 03-01-PLAN.md  03-01-SUMMARY.md  03-02-PLAN.md  03-02-SUMMARY.md  03-03-PLAN.md  03-03-SUMMARY.md  03-CONTEXT.md  03-RESEARCH.md  03-VERIFICATION.md
.planning/phases/04-air-distance/: 04-01-PLAN.md  04-01-SUMMARY.md  04-02-PLAN.md  04-02-SUMMARY.md  04-CONTEXT.md  04-RESEARCH.md  04-VERIFICATION.md
.planning/phases/05-excitation-room-tone/: 05-01-PLAN.md  05-01-SUMMARY.md  05-02-PLAN.md  05-02-SUMMARY.md  05-CONTEXT.md  05-RESEARCH.md  05-VERIFICATION.md
.planning/phases/06-user-interface/: 06-01-PLAN.md  06-01-SUMMARY.md  06-02-PLAN.md  06-02-SUMMARY.md  06-03-PLAN.md  06-03-SUMMARY.md  06-04-PLAN.md  06-04-SUMMARY.md  06-CONTEXT.md  06-RESEARCH.md
.planning/phases/07-visualization/: .continue-here.md  07-01-PLAN.md  07-01-SUMMARY.md  07-02-PLAN.md  07-CONTEXT.md  07-RESEARCH.md
.planning/quick/1-implement-6-factory-presets-and-wire-pre/: 1-PLAN.md  1-SUMMARY.md
.planning/quick/2-fix-comb-filtering-minimum-delay-floor-d/: 2-PLAN.md  2-SUMMARY.md
.planning/quick/3-mix-lock-dropdown-arrows-user-preset-sav/: 3-PLAN.md  3-SUMMARY.md
.planning/research/: ARCHITECTURE.md  FEATURES.md  PITFALLS.md  STACK.md  SUMMARY.md
Source/: Parameters.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
Source/dsp/: AirSection.cpp  AirSection.h  CabinetSection.cpp  CabinetSection.h  DiffuseTailSection.cpp  DiffuseTailSection.h  ExcitationSection.cpp  ExcitationSection.h  MixSection.cpp  MixSection.h  OutputSection.cpp  OutputSection.h  ReflectionsSection.cpp  ReflectionsSection.h  ResonanceSection.cpp  ResonanceSection.h  RoomToneSection.cpp  RoomToneSection.h  StageSection.h
Source/presets/: FactoryPresets.h  UserPresetManager.cpp  UserPresetManager.h
Source/ui/: AetherBypassButton.cpp  AetherBypassButton.h  AetherColours.h  AetherKnob.cpp  AetherKnob.h  AetherLookAndFeel.cpp  AetherLookAndFeel.h  AetherToggle.cpp  AetherToggle.h  ArrowStepButton.cpp  ArrowStepButton.h  MixLockButton.cpp  MixLockButton.h  ParchmentElements.cpp  ParchmentElements.h  PresetSelector.cpp  PresetSelector.h  SectionComponent.cpp  SectionComponent.h  VisualizationComponent.cpp  VisualizationComponent.h
